syntax = "proto3";
package babylon.mint.v1;

import "babylon/mint/v1/mint.proto";

option go_package = "github.com/babylonlabs-io/babylon/v2/x/mint/types";

// GenesisState defines the mint module's genesis state.
message GenesisState {
  // minter represents the mint state.
  Minter minter = 1;
  // this field was bond_denom previously (included in minter)
  reserved 2;
  // GenesisTime is the timestamp of the genesis block.
  GenesisTime genesis_time = 3;
}
